--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -27,9 +27,9 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
-                            <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="resume.html">Resumen - CV</a></li>
+                            <li class="nav-item"><a class="nav-link" href="projects.html">Proyectos</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
                         </ul>
                     </div>
                 </div>
@@ -45,8 +45,8 @@
                                 <div class="fs-3 fw-light text-muted">Hola, soy <strong>Rick</strong>. Periodista, creativo y amante del lenguaje</div>
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Creo puentes con palabras</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                                    <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resumen - CV</a>
-                                    <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Proyectos</a>
+                                    <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="projects.html">Proyectos</a>
+                                    <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="resume.html">Resumen</a>
                                 </div>
                             </div>
                         </div>
@@ -181,9 +181,9 @@
                     <div class="row gx-5 justify-content-center">
                         <div class="col-xxl-8">
                             <div class="text-center my-5">
-                                <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
+                                <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">Sobre mí</span></h2>
                                 <p class="lead fw-light mb-4">Me llamo <strong>Rick</strong> y mediante las palabras busco un mundo empático.</p>
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit dolorum itaque qui unde quisquam consequatur autem. Eveniet quasi nobis aliquid cumque officiis sed rem iure ipsa! Praesentium ratione atque dolorem?</p>
+                                <p class="text-muted">Mi trabajo busca unir lo sensible con lo riguroso. Me interesa lo que hay entre líneas, en los silencios, en los discursos que duelen y también en los que curan.</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
                                     <a class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
