--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -183,7 +183,7 @@
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">Sobre mí</span></h2>
                                 <p class="lead fw-light mb-4">Me llamo <strong>Rick</strong> y mediante las palabras busco un mundo empático.</p>
-                                <p class="text-muted">Mi trabajo busca unir lo sensible con lo riguroso. Me interesa lo que hay entre líneas, en los silencios, en los discursos que duelen y también en los que curan.</p>
+                                <p class="text-muted">Mi trabajo busca unir lo sensible con lo riguroso. Me interesa lo que hay entre líneas, en los silencios, en los discursos que duelen y también en los que curan. Siempre he sido un apasionado por la redacción y todo aquello relacionado con lo humano. Desde la antropología hasta las artes.</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
                                     <a class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
