--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/contact.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/contact.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content />
         <meta name="author" content />
-        <title>oranrick</title>
+        <title>Contacta - Rick Grisales</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/orange.ico" />
         <!-- Custom Google font-->
