--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Periodista humanista" />
         <meta name="author" content="Rick Grisales" />
-        <title>Personal - Rick Grisales</title>
+        <title>Home - Rick Grisales</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/orange.ico" />
         <!-- Custom Google font-->
