--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/contact.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/contact.html
@@ -54,52 +54,41 @@
                                 <!-- To make this form functional, sign up at-->
                                 <!-- https://startbootstrap.com/solution/contact-forms-->
                                 <!-- to get an API token!-->
-                                <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                                    <!-- Name input-->
-                                    <div class="form-floating mb-3">
-                                        <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
-                                        <label for="name">Nombre</label>
-                                        <div class="invalid-feedback" data-sb-feedback="name:required">Se requiere un nombre.</div>
-                                    </div>
-                                    <!-- Email address input-->
-                                    <div class="form-floating mb-3">
-                                        <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
-                                        <label for="email">Dirección de correo</label>
-                                        <div class="invalid-feedback" data-sb-feedback="email:required">Se requiere un correo electrónico.</div>
-                                        <div class="invalid-feedback" data-sb-feedback="email:email">La dirección de correo no es válida.</div>
-                                    </div>
-                                    <!-- Phone number input-->
-                                    <div class="form-floating mb-3">
-                                        <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
-                                        <label for="phone">Número de teléfono</label>
-                                        <div class="invalid-feedback" data-sb-feedback="phone:required">Se requiere un número de teléfono.</div>
-                                    </div>
-                                    <!-- Message input-->
-                                    <div class="form-floating mb-3">
-                                        <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
-                                        <label for="message">Mensaje</label>
-                                        <div class="invalid-feedback" data-sb-feedback="message:required">Se requiere un mensaje</div>
-                                    </div>
-                                    <!-- Submit success message-->
-                                    <!---->
-                                    <!-- This is what your users will see when the form-->
-                                    <!-- has successfully submitted-->
-                                    <div class="d-none" id="submitSuccessMessage">
-                                        <div class="text-center mb-3">
-                                            <div class="fw-bolder">¡Solicitud de mensaje enviada correctamente!</div>
-                                            To activate this form, sign up at
-                                            <br />
-                                            <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                                        </div>
-                                    </div>
-                                    <!-- Submit error message-->
-                                    <!---->
-                                    <!-- This is what your users will see when there is-->
-                                    <!-- an error submitting the form-->
-                                    <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">¡Error enviando mensaje!</div></div>
-                                    <!-- Submit Button-->
-                                    <div class="d-grid"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Enviar</button></div>
-                                </form>
+                                <form action="https://formsubmit.co/oranrick@gmail.com" method="POST">
+    <!-- Name input-->
+    <div class="form-floating mb-3">
+        <input class="form-control" id="name" name="name" type="text" placeholder="Tu nombre" required />
+        <label for="name">Nombre</label>
+    </div>
+
+    <!-- Email address input-->
+    <div class="form-floating mb-3">
+        <input class="form-control" id="email" name="email" type="email" placeholder="tu@email.com" required />
+        <label for="email">Correo electrónico</label>
+    </div>
+
+    <!-- Phone number input-->
+    <div class="form-floating mb-3">
+        <input class="form-control" id="phone" name="phone" type="tel" placeholder="Tu número" />
+        <label for="phone">Número de teléfono</label>
+    </div>
+
+    <!-- Message input-->
+    <div class="form-floating mb-3">
+        <textarea class="form-control" id="message" name="message" placeholder="Tu mensaje" style="height: 10rem" required></textarea>
+        <label for="message">Mensaje</label>
+    </div>
+
+    <!-- Hidden input for redirect (opcional) -->
+    <input type="hidden" name="_next" value="https://tusitio.com/gracias.html">
+    <!-- Ocultar captcha de FormSubmit -->
+    <input type="hidden" name="_captcha" value="false">
+
+    <!-- Submit Button -->
+    <div class="d-grid">
+        <button class="btn btn-primary btn-lg" type="submit">Enviar</button>
+    </div>
+</form>
                             </div>
                         </div>
                     </div>
