--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/contact.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/contact.html
@@ -80,7 +80,7 @@
     </div>
 
     <!-- Hidden input for redirect (opcional) -->
-    <input type="hidden" name="_next" value="https://tusitio.com/gracias.html">
+    <input type="hidden" name="_next" value="https://oranrick.netlify.app/gracias.html">
     <!-- Ocultar captcha de FormSubmit -->
     <input type="hidden" name="_captcha" value="false">
 
