--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/gracias.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/gracias.html
@@ -38,11 +38,11 @@
             <div class="container px-5 text-center">
                 <div class="bg-light rounded-4 py-5 px-4 px-md-5">
                     <div class="mb-4">
-                        <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 mb-3 d-inline-block p-3">
-                            <i class="bi bi-check-circle fs-1"></i>
-                        </div>
+                        <div class="mb-4">
+    <i class="bi bi-check-circle-fill text-primary" style="font-size: 3rem;"></i>
+</div>
                         <h1 class="fw-bolder">¡Gracias por contactarme!</h1>
-                        <p class="lead fw-normal text-muted">Estaré contigo con la mayor brevedad posible.</p>
+                        <p class="lead fw-normal text-muted">Estaré contigo en la mayor brevedad posible :)</p>
                     </div>
                     <div class="d-grid gap-3 d-sm-flex justify-content-center mt-4">
                         <a class="btn btn-primary btn-lg px-5 py-3" href="index.html">Volver a inicio</a>
