--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
@@ -49,7 +49,7 @@
                                 <!-- Note: Set the link href target to a PDF file within your project-->
                                 <a class="btn btn-primary px-4 py-3" href="#!">
                                     <div class="d-inline-block bi bi-download me-2"></div>
-                                    Descargar resumen
+                                    Descargar CV
                                 </a>
                             </div>
                             <!-- Experience Card 1-->
@@ -58,13 +58,11 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">2019 - Present</div>
-                                                <div class="small fw-bolder">Web Developer</div>
-                                                <div class="small text-muted">Stark Industries</div>
-                                                <div class="small text-muted">Los Angeles, CA</div>
+                                                <div class="text-primary fw-bolder mb-2">¡Sin experiencia en el sector de la comunicación!</div>
+                                                <div class="small fw-bolder">
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8"><div>Debido a mi independencia y mi estilo de vida ajetreado, no he tenido la posibilidad de trabajar en una empresa especializada en comunicacion. Estaré encantado de formar parte de tu empresa, mi inexperiencia no resta mis capacidades y mi talento.</div></div>
                                     </div>
                                 </div>
                             </div>
