Más experiencia y Edu

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
@@ -72,13 +72,13 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">2017 - 2019</div>
-                                                <div class="small fw-bolder">SEM Specialist</div>
-                                                <div class="small text-muted">Wayne Enterprises</div>
-                                                <div class="small text-muted">Gotham City, NY</div>
+                                                <div class="text-primary fw-bolder mb-2">2023 - 2025</div>
+                                                <div class="small fw-bolder">Honest Greens</div>
+                                                <div class="small text-muted">Camarero / Host</div>
+                                                <div class="small text-muted">Madrid, ES</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8"><div>Visto desde el ángulo desde la comunicación, todos los trabajos enseñan algo. Ser camarero, más aún en Gran Vía, me ha proporcionado grandes skills comunicativas oportunas para cualquier trabajo., </div></div>
                                     </div>
                                 </div>
                             </div>
@@ -92,18 +92,18 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-secondary fw-bolder mb-2">2015 - 2017</div>
+                                                <div class="text-secondary fw-bolder mb-2">2021 - 2025</div>
                                                 <div class="mb-2">
-                                                    <div class="small fw-bolder">Barnett College</div>
-                                                    <div class="small text-muted">Fairfield, NY</div>
+                                                    <div class="small fw-bolder">Universidad Complutense de Madrid</div>
+                                                    <div class="small text-muted">Madrid, ES</div>
                                                 </div>
                                                 <div class="fst-italic">
-                                                    <div class="small text-muted">Master's</div>
-                                                    <div class="small text-muted">Web Development</div>
+                                                    <div class="small text-muted">Grado universitario</div>
+                                                    <div class="small text-muted">Periodista</div>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8"><div>Sin duda alguna, lo más valioso que me ha proporcionado la carrera es entender el lenguaje de una forma multidimensional. Saber leer el mundo y cómo vivirlo mediante las palabras ha sido mi mayor aprendizaje, y, además, mi propósito de vida.</div></div>
                                     </div>
                                 </div>
                             </div>
