Actualizar resume.html

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
@@ -78,7 +78,7 @@
                                                 <div class="small text-muted">Madrid, ES</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Visto desde el ángulo desde la comunicación, todos los trabajos enseñan algo. Ser camarero, más aún en Gran Vía, me ha proporcionado grandes skills comunicativas oportunas para cualquier trabajo., </div></div>
+                                        <div class="col-lg-8"><div>Visto desde el ángulo desde la comunicación, todos los trabajos enseñan algo. Ser camarero, más aún en Gran Vía, me ha proporcionado grandes skills comunicativas oportunas para cualquier trabajo.</div></div>
                                     </div>
                                 </div>
                             </div>
