--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
@@ -47,8 +47,8 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Project Name 1</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <h2 class="fw-bolder">Del surrealismo a la crisis ecológica: Arte y  naturaleza en diálogo</h2>
+                                            <p>Madrid se convierte en un oasis de vitalismo con la exposición “Arte y naturaleza. Un siglo  de biomorfismo”. A través de obras de grandes artistas como Pablo Picasso, Salvador Dalí o Charles Le Corbusier, la muestra invita a reflexionar sobre cómo la naturaleza ha inspirado  a los artistas a lo largo de un siglo.</p>
                                         </div>
                                         <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
                                     </div>
