pa llevar a arte

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
@@ -47,8 +47,10 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Del surrealismo a la crisis ecológica: Arte y  naturaleza en diálogo</h2>
-                                            <p>Madrid se convierte en un oasis de vitalismo con la exposición “Arte y naturaleza. Un siglo  de biomorfismo”. A través de obras de grandes artistas como Pablo Picasso, Salvador Dalí o Charles Le Corbusier, la muestra invita a reflexionar sobre cómo la naturaleza ha inspirado  a los artistas a lo largo de un siglo.</p>
+                                            <a href="proyecto-arte-naturaleza.html" style="text-decoration: none; color: inherit;">
+    <h2 class="fw-bolder">Del surrealismo a la crisis ecológica: Arte y naturaleza en diálogo</h2>
+    <p>Madrid se convierte en un oasis de vitalismo con la exposición “Arte y naturaleza. Un siglo  de biomorfismo”...</p>
+</a>
                                         </div>
                                         <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
                                     </div>
