--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
@@ -47,7 +47,7 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <a href="proyecto-arte-naturaleza.html" style="text-decoration: none; color: inherit;">
+                                            <a href="arte-naturaleza.html" style="text-decoration: none; color: inherit;">
     <h2 class="fw-bolder">Del surrealismo a la crisis ecológica: Arte y naturaleza en diálogo</h2>
     <p>Madrid se convierte en un oasis de vitalismo con la exposición “Arte y naturaleza. Un siglo  de biomorfismo”...</p>
 </a>
