Actualizar arte-naturaleza.html

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
@@ -10,6 +10,32 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
+
+<style>
+    body {
+        background-color: white !important;
+    }
+
+    .custom-article {
+        background-color: white;
+        padding: 2rem;
+    }
+
+    @media (min-width: 768px) {
+        .custom-article {
+            max-width: 750px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+
+    .gradient-title {
+        background: linear-gradient(to right, #ffa94d, #ffd6a5);
+        display: inline;
+        padding: 0.2em 0.4em;
+        border-radius: 5px;
+    }
+</style>
 </head>
 <body class="d-flex flex-column h-100 bg-light">
 <main class="flex-shrink-0">
@@ -33,8 +59,8 @@
 
     <!-- Content -->
     <section class="py-5">
-        <div class="container px-5">
-            <h1 class="fw-bolder mb-4">Del surrealismo a la crisis ecológica: Arte y naturaleza en diálogo</h1>
+    <div class="container px-5 custom-article">
+        <h1 class="fw-bolder mb-4"><span class="gradient-title">Del surrealismo a la crisis ecológica: Arte y naturaleza en diálogo</span></h1>
             <p class="lead fw-bold fst-italic">
                 Madrid se convierte en un oasis de vitalismo con la exposición “Arte y naturaleza. Un siglo de biomorfismo”. A través de obras de grandes artistas como Pablo Picasso, Salvador Dalí o Charles Le Corbusier, la muestra invita a reflexionar sobre cómo la naturaleza ha inspirado a los artistas a lo largo de un siglo.
             </p>
