degradado titulo arte y naturaleza

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
@@ -30,11 +30,14 @@
     }
 
     .gradient-title {
-        background: linear-gradient(to right, #ffa94d, #ffd6a5);
-        display: inline;
-        padding: 0.2em 0.4em;
-        border-radius: 5px;
-    }
+    background: linear-gradient(to right, #ffa94d, #ffd6a5);
+    padding: 0.4em 0.6em;
+    border-radius: 8px;
+    display: inline-block;
+    line-height: 1.4;
+    box-decoration-break: clone;
+    -webkit-box-decoration-break: clone;
+}
 </style>
 </head>
 <body class="d-flex flex-column h-100 bg-light">
