--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
@@ -1,157 +1,120 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Arte y Naturaleza - Rick Grisales</title>
-  <link rel="icon" type="image/x-icon" href="assets/orange.ico" />
-  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&display=swap" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
-  <link href="css/styles.css" rel="stylesheet" />
-  <style>
-    body, main {
-      background-color: white !important;
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Arte y Naturaleza - Rick Grisales</title>
+    <link rel="icon" type="image/x-icon" href="assets/orange.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&display=swap" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
+
+<style>
+    body {
+        background-color: white !important;
     }
+
     .custom-article {
-      background-color: white;
-      padding: 2rem;
+        background-color: white;
+        padding: 2rem;
     }
+
     @media (min-width: 768px) {
-      .custom-article {
-        max-width: 750px;
-        margin-left: auto;
-        margin-right: auto;
-      }
+        .custom-article {
+            max-width: 750px;
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
+
     .gradient-title {
-      background: linear-gradient(to right, #ffa94d, #ffd6a5);
-      padding: 0.4em 0.6em;
-      border-radius: 8px;
-      display: inline-block;
-      line-height: 1.4;
-      box-decoration-break: clone;
-      -webkit-box-decoration-break: clone;
-    }
-    img.obra {
-      max-width: 100%;
-      height: auto;
-      border-radius: 12px;
-      margin: 1.5rem 0;
-    }
-    @media (min-width: 992px) {
-      .obra-lateral {
-        display: flex;
-        align-items: center;
-        gap: 2rem;
-      }
-      .obra-lateral img {
-        max-width: 40%;
-      }
-      .obra-lateral p {
-        flex: 1;
-      }
-    }
-  </style>
+    background: linear-gradient(to right, #ffa94d, #ffd6a5);
+    padding: 0.4em 0.6em;
+    border-radius: 8px;
+    display: inline-block;
+    line-height: 1.4;
+    box-decoration-break: clone;
+    -webkit-box-decoration-break: clone;
+}
+</style>
 </head>
-<body class="d-flex flex-column h-100">
-  <main class="flex-shrink-0">
+<body class="d-flex flex-column h-100 bg-light">
+<main class="flex-shrink-0">
+    <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
-      <div class="container px-5">
-        <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Rick Grisales</span></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="resume.html">Resumen - CV</a></li>
-            <li class="nav-item"><a class="nav-link" href="projects.html">Proyectos</a></li>
-            <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
-          </ul>
+        <div class="container px-5">
+            <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Rick Grisales</span></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="resume.html">Resumen - CV</a></li>
+                    <li class="nav-item"><a class="nav-link" href="projects.html">Proyectos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
 
+    <!-- Content -->
     <section class="py-5">
-      <div class="container px-5 custom-article">
-        <h1 class="fw-bolder mb-4">
-          <span class="gradient-title">Del surrealismo a la crisis ecológica: Arte y naturaleza en diálogo</span>
-        </h1>
+    <div class="container px-5 custom-article">
+        <h1 class="fw-bolder mb-4"><span class="gradient-title">Del surrealismo a la crisis ecológica: Arte y naturaleza en diálogo</span></h1>
+            <p class="lead fw-bold fst-italic">
+                Madrid se convierte en un oasis de vitalismo con la exposición “Arte y naturaleza. Un siglo de biomorfismo”. A través de obras de grandes artistas como Pablo Picasso, Salvador Dalí o Charles Le Corbusier, la muestra invita a reflexionar sobre cómo la naturaleza ha inspirado a los artistas a lo largo de un siglo.
+            </p>
+            <p>Este evento estará disponible durante una larga temporada. Inició el 19 de febrero y terminará el 9 de junio. El comisariado de la exposición estuvo a cargo de Angela Lampe, doctora en Historia del Arte por la Universidad La Sorbona de París. La muestra representa una reflexión entre el arte y la naturaleza, entre cultura y ciencia, principalmente a través del surrealismo.</p>
+            <p>La mayoría de las obras son préstamos del Centre Pompidou, tanto el parisino, como el malagueño. Esta masiva exposición cuenta con obras de artistas tan imponentes como Georgia O’Keeffe, Visili Kandinski, Jean Dubuffet, Max Ernst, entre otros grandes maestros. Aunque la mayoría de la exposición está liderada por la pintura, encontramos diferentes soportes que hacen la exposición dinámica, divertida y profunda.</p>
+            <p>En la exposición, se muestran diferentes tipos de obras para representar cuatro conceptos relacionados con la naturaleza y su desarrollo. La muestra está marcada por el movimiento, la imaginación, la vida y el uso de los colores.</p>
+            <p>Los cuatro conceptos mencionados anteriormente hacen referencia al estado de la naturaleza, lo que genera que la exposición tenga diferentes fases. Al iniciar, nos encontraremos en metamorfosis en donde se difumina la línea entre las formas antropomorfas, zoomorfas o vegetales para abrirse a nuevas posibilidades más creativas.</p>
+            <p>En este apartado, encontramos obras como <em>Femme au chapeau</em> de Pablo Picasso (1935), en donde vemos a una mujer con un rostro distorsionado, símbolo de cambio y transformación, característico de la metamorfosis de la naturaleza.</p>
+            <p>Además, encontramos obras como <em>Le Palais aux rochers de fenêtres</em> de Yves Tanguy (1942), en donde vemos una obra dividida en dos: en la parte superior, un cielo orgánico, natural, tranquilo; mientras que en la parte inferior la relación entre lo mecánico y lo geológico, lo natural y lo inerte. La metamorfosis está presente en el paisaje, como este ha sido transformado por la modernidad y como las montañas pasan a ser una mezcla entre lo salvaje y lo humanamente creado.</p>
+            <p>Posteriormente, pasamos al apartado de mimetismo, donde la naturaleza, en sus diversas formas, se convierte en una fuente de inspiración para los artistas, quienes reproducen sus formas, texturas y movimientos.</p>
+            <p>Encontramos obras como <em>Cielo azul</em> del padre del arte abstracto, Kandinski. En esta obra, vemos extrañas formas biomórficas que flotan sobre un fondo azul celeste, no se puede identificar exactamente qué son, pero, sin duda alguna, podemos ver la intención del autor: expresar emociones y crear una experiencia sensorial a través de su pintura. Las formas en <em>Cielo azul</em> son una mezcla de biomorfos, formas abstractas que parecen tener alguna referencia orgánica, podría decirse que son aves o criaturas marinas, aunque es imposible determinarlo. El objetivo de Kandinski es crear una sensación de movimiento y ligereza, como si estas formas flotaran en el aire.</p>
+            <p>Tras haber visto dos secciones ecuatoriales, homogéneas, más dedicadas al desarrollo de la naturaleza; pasamos a dos que son los polos: creación y amenaza.</p>
+            <p>En creación, observamos la imaginación del pintor moderno en su clímax, los artistas se convierten en dioses, juegan con su experiencia y con la naturaleza, crean nuevas formas exquisitas para la vista.</p>
+            <p>Así, encontramos por ejemplo <em>Breed</em> de Richard Deacon (1989), un enrevesado engendramiento hecho a base de madera y masonita estratificados, aluminio, resina epoxi y pigmentos. La obra tiene una apariencia rígida, metálica, pero móvil, libre, fluida. Es una representación de la nueva creación, del nuevo uso de la naturaleza a merced del hombre, del sometimiento de la naturaleza al imaginativo humano, el cual es infinito. Ya lo veríamos con Degas y su geometría para mostrar el movimiento.</p>
+            <p>Finalizando, encontramos amenaza, la sección más fiel a la realidad y la más profunda. Se trata de representar la desgracia traída por el ser humano y su eco en la naturaleza. Como usamos algo tan bello, tan vivo, para actos tan muertos. Esta sección juega más con otros elementos externos al arte plástico: vemos una sala a la que entramos con gafas 3D, donde continuamente se reproduce un vídeo de aves volando en bandada, desesperadas. Transmite una energía sombría. Probablemente el mensaje no esté establecido ni esté claro, pero algo se puede inferir: las creaciones humanas (como las gafas tridimensionales), son causantes de las desgracias naturales. Así lo observamos en todas las obras del pasaje.</p>
+            <p>En esta sección, encontramos también <em>Pollution-Cultivation-Nouvelle Écologie</em> de Tetsumi Kudo (1971), en donde observamos diferentes tipos de plantas que contienen circuitos electrónicos en su raíz. Es la representación de la humanidad en decadencia, de la naturaleza contaminada. Según palabras del autor, el “antagonismo primitivo” del ser humano contra la naturaleza. Véase como una crítica a la sobreproducción tecnológica y al continuo avance de esta, como las nuevas formas de ecologismo y conservación. No se puede ser ecológico mediante la tecnología, puesto que esta es contraria a esta, desde la raíz.</p>
+            <p>Casi al finalizar la exposición, nos chocamos con <em>Skin Pool (Gleen)</em> de Pamela Rosenkranz (1979), una gran piscina que contenía un líquido de un color beige, rosa, cremoso, sobre esto, el comentario que se mostraba al público decía “<em>Skin Pool</em> contiene un extraño líquido de un color entre rosa y beis, que recuerda al tono de una piel supuestamente blanca, tal y como aparece idealizada en la publicidad. (…) La artista cuestiona el modo en que la industria cosmética interfiere en nuestra relación con el cuerpo.” Es así como Rosenkranz usa el arte como una crítica social y humana. Su obra refleja cómo el ser humano crea modelos que únicamente corrompen tanto el valor más humano del hombre, como el poder bello y transformador de la naturaleza para algo tan lóbrego.</p>
+            <p>Las cuatro representaciones de la naturaleza en el arte son también un recorrido histórico de la relación entre el artista y lo natural. La visión del humano ante los fenómenos de la naturaleza y el cambio paulatino de esta. El arte abstracto y el surrealista son de los movimientos con mayor capacidad para mostrar el objetivo de la muestra. Estas corrientes se caracterizan por su libertad y fluidez, elementos necesarios para el desarrollo del arte orgánico. El caos (organizado), las paletas de colores, las formas; transmiten una emocionalidad inmersiva envidiable por cualquier otra corriente.</p>
+            <p>Esta exposición es auténtica, es libre y es potente. El trabajo de la comisaria estuvo realizado estupendamente, la capacidad de la muestra para sumergir al espectador entre esa conexión de lo orgánico y lo mecánico es sutil, pero tiene un trabajo de aplausos detrás de escena. La reunión de tanto arte abstracto y surrealista le convierte en una exposición totalmente vanguardista, pero estando al nivel de cualquier muestra clásica. Al salir del recinto la mente está reflexiva, inquieta y maravillada, el pensamiento empieza a conectar la cotidianidad con lo inorgánico; y la libertad, en su máximo punto, como lo haría un cuadro de Picasso: como la concebiría un niño de cinco años, orgánica en sí misma.</p>
 
-        <img src="portadaarte.jpg" alt="Portada del proyecto arte y naturaleza" class="obra" />
-
-        <p class="lead fw-bold fst-italic">
-          Madrid se convierte en un oasis de vitalismo con la exposición “Arte y naturaleza. Un siglo de biomorfismo”. A través de obras de grandes artistas como Pablo Picasso, Salvador Dalí o Charles Le Corbusier, la muestra invita a reflexionar sobre cómo la naturaleza ha inspirado a los artistas a lo largo de un siglo.
-        </p>
-
-        <p>Este evento estará disponible durante una larga temporada. Inició el 19 de febrero y terminará el 9 de junio. El comisariado de la exposición estuvo a cargo de Angela Lampe, doctora en Historia del Arte por la Universidad La Sorbona de París. La muestra representa una reflexión entre el arte y la naturaleza, entre cultura y ciencia, principalmente a través del surrealismo.</p>
-
-        <p>La mayoría de las obras son préstamos del Centre Pompidou, tanto el parisino, como el malagueño. Esta masiva exposición cuenta con obras de artistas tan imponentes como Georgia O’Keeffe, Visili Kandinski, Jean Dubuffet, Max Ernst, entre otros grandes maestros. Aunque la mayoría de la exposición está liderada por la pintura, encontramos diferentes soportes que hacen la exposición dinámica, divertida y profunda.</p>
-
-        <p>En la exposición, se muestran diferentes tipos de obras para representar cuatro conceptos relacionados con la naturaleza y su desarrollo. La muestra está marcada por el movimiento, la imaginación, la vida y el uso de los colores.</p>
-
-        <p>Los cuatro conceptos mencionados anteriormente hacen referencia al estado de la naturaleza, lo que genera que la exposición tenga diferentes fases. Al iniciar, nos encontraremos en metamorfosis en donde se difumina la línea entre las formas antropomorfas, zoomorfas o vegetales para abrirse a nuevas posibilidades más creativas.</p>
-
-        <p>En este apartado, encontramos obras como <em>Femme au chapeau</em> de Pablo Picasso (1935)...</p>
-
-        <div class="obra-lateral">
-          <img src="arte-1.jpg" alt="Le Palais aux rochers de fenêtres de Yves Tanguy" class="obra" />
-          <p>Además, encontramos obras como <em>Le Palais aux rochers de fenêtres</em> de Yves Tanguy (1942)...</p>
+            <h5 class="mt-5">Datos útiles:</h5>
+            <ul>
+                <li><strong>Lugar:</strong> CaixaForum Madrid</li>
+                <li><strong>Dirección:</strong> P.º del Prado, 36, Centro, 28014 Madrid</li>
+                <li><strong>Web:</strong> <a href="https://caixaforum.org/es/madrid/p/arte-y-naturaleza_a164379698" target="_blank">caixaforum.org</a></li>
+                <li><strong>Fechas:</strong> 19 de febrero – 9 de junio de 2024</li>
+                <li><strong>Transporte:</strong> Metro Estación del Arte, Metro y Cercanías Atocha. Múltiples líneas de autobuses.</li>
+                <li><strong>Precio:</strong> 6€ o gratis para clientes CaixaBank.</li>
+                <li><strong>Horarios:</strong> Todos los días, de 10 a 20 hrs.</li>
+            </ul>
         </div>
-
-        <p>Posteriormente, pasamos al apartado de mimetismo...</p>
-
-        <div class="obra-lateral">
-          <img src="arte-2.jpg" alt="Cielo azul de Kandinski" class="obra" />
-          <p>Encontramos obras como <em>Cielo azul</em> del padre del arte abstracto, Kandinski...</p>
-        </div>
-
-        <p>Tras haber visto dos secciones ecuatoriales, homogéneas, más dedicadas al desarrollo de la naturaleza; pasamos a dos que son los polos: creación y amenaza.</p>
-
-        <div class="obra-lateral">
-          <img src="arte-3.jpg" alt="Breed de Richard Deacon" class="obra" />
-          <p>Así, encontramos por ejemplo <em>Breed</em> de Richard Deacon (1989)...</p>
-        </div>
-
-        <p>Finalizando, encontramos amenaza...</p>
-
-        <div class="obra-lateral">
-          <img src="arte-4.jpg" alt="Pollution-Cultivation-Nouvelle Écologie de Tetsumi Kudo" class="obra" />
-          <p>En esta sección, encontramos también <em>Pollution-Cultivation-Nouvelle Écologie</em> de Tetsumi Kudo (1971)...</p>
-        </div>
-
-        <p>Casi al finalizar la exposición, nos chocamos con <em>Skin Pool (Gleen)</em> de Pamela Rosenkranz (1979)...</p>
-
-        <h5 class="mt-5">Datos útiles:</h5>
-        <ul>
-          <li><strong>Lugar:</strong> CaixaForum Madrid</li>
-          <li><strong>Dirección:</strong> P.º del Prado, 36, Centro, 28014 Madrid</li>
-          <li><strong>Web:</strong> <a href="https://caixaforum.org/es/madrid/p/arte-y-naturaleza_a164379698" target="_blank">caixaforum.org</a></li>
-          <li><strong>Fechas:</strong> 19 de febrero – 9 de junio de 2024</li>
-          <li><strong>Transporte:</strong> Metro Estación del Arte, Metro y Cercanías Atocha. Múltiples líneas de autobuses.</li>
-          <li><strong>Precio:</strong> 6€ o gratis para clientes CaixaBank.</li>
-          <li><strong>Horarios:</strong> Todos los días, de 10 a 20 hrs.</li>
-        </ul>
-      </div>
     </section>
-  </main>
+</main>
 
-  <footer class="bg-white py-4 mt-auto">
+<!-- Footer -->
+<footer class="bg-white py-4 mt-auto">
     <div class="container px-5">
-      <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-        <div class="col-auto"><div class="small m-0">Copyright &copy; Rick 2025</div></div>
-        <div class="col-auto">
-          <a class="small" href="#!">Privacidad</a>
-          <span class="mx-1">&middot;</span>
-          <a class="small" href="#!">Términos</a>
-          <span class="mx-1">&middot;</span>
-          <a class="small" href="#!">Contacto</a>
+        <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+            <div class="col-auto"><div class="small m-0">Copyright &copy; Rick 2025</div></div>
+            <div class="col-auto">
+                <a class="small" href="#!">Privacidad</a>
+                <span class="mx-1">&middot;</span>
+                <a class="small" href="#!">Términos</a>
+                <span class="mx-1">&middot;</span>
+                <a class="small" href="#!">Contacto</a>
+            </div>
         </div>
-      </div>
     </div>
-  </footer>
+</footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="js/scripts.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
