--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
@@ -34,14 +34,13 @@
             }
         }
         .gradient-title {
-            background: linear-gradient(to right, #ffa94d, #ffd6a5);
-            padding: 0.4em 0.6em;
-            border-radius: 8px;
-            display: inline-block;
-            line-height: 1.4;
-            box-decoration-break: clone;
-            -webkit-box-decoration-break: clone;
-        }
+    background: none;
+    border-bottom: 3px solid #ffa94d;
+    display: inline-block;
+    padding-bottom: 4px;
+    font-weight: 700;
+}
+        
         .obra {
             border-radius: 10px;
             margin: 1rem 0;
