--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
@@ -34,11 +34,11 @@
             }
         }
         .gradient-title {
-    background: none;
-    border-bottom: 3px solid #ffa94d;
+    background-color: #fff3e0; /* un tono melocotón muy suave */
+    padding: 0.2em 0.4em;
+    border-radius: 4px;
     display: inline-block;
-    padding-bottom: 4px;
-    font-weight: 700;
+    font-weight: 600;
 }
         
         .obra {
