--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
@@ -52,7 +52,7 @@
     <p>Madrid se convierte en un oasis de vitalismo con la exposición “Arte y naturaleza. Un siglo  de biomorfismo”...</p>
 </a>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets/portadaarte.jpg" alt="Arte y naturaleza portada" />
                                     </div>
                                 </div>
                             </div>
