--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
@@ -34,11 +34,15 @@
             }
         }
         .gradient-title {
-    background-color: #fff3e0; /* un tono melocotón muy suave */
-    padding: 0.2em 0.4em;
-    border-radius: 4px;
+    background: linear-gradient(to right, #ffa94d, #ffd6a5);
+    color: white;
+    padding: 0.4em 0.6em;
+    border-radius: 8px;
     display: inline-block;
-    font-weight: 600;
+    line-height: 1.4;
+    box-decoration-break: clone;
+    -webkit-box-decoration-break: clone;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); /* mejora la legibilidad */
 }
         
         .obra {
