--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
@@ -34,15 +34,11 @@
             }
         }
         .gradient-title {
-    background: linear-gradient(to right, #ffa94d, #ffd6a5);
-    color: white;
-    padding: 0.4em 0.6em;
-    border-radius: 8px;
+    color: #111;
+    font-weight: 700;
     display: inline-block;
-    line-height: 1.4;
-    box-decoration-break: clone;
-    -webkit-box-decoration-break: clone;
-    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); /* mejora la legibilidad */
+    border-bottom: 4px solid #ffa94d;
+    padding-bottom: 0.2em;
 }
         
         .obra {
