--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
@@ -34,11 +34,8 @@
             }
         }
         .gradient-title {
-    color: #111;
+    color: #ffa94d;
     font-weight: 700;
-    display: inline-block;
-    border-bottom: 4px solid #ffa94d;
-    padding-bottom: 0.2em;
 }
         
         .obra {
