--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
@@ -34,8 +34,11 @@
             }
         }
         .gradient-title {
-    color: #ffa94d;
+    color: #111;
     font-weight: 700;
+    display: inline-block;
+    border-bottom: 4px solid #ffa94d;
+    padding-bottom: 0.2em;
 }
         
         .obra {
